css/main.css
/*
Colors to use:
dark blue: #06365f
light blue: #1c5380
*/

body {
  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  background: #FFF url('../images/bgtile.png') repeat-x;
  margin: auto;
  width: 60%;
}

wrap {
  position: relative;
  top: 110px;
}

div {
  display: inline-block;
}

h1 {
  font-size: 1.2em;
  color: #06365f;
}

.mainImage {
  height: 75%;
}

#main {
  display: inline-block;
  width: 40%;
  margin-left: 50px;
}

#info {
  background: url('../images/frame.png') no-repeat;
  width: 450px;
  padding: 30px;
}

#copyright {
  color: silver;
  text-transform: uppercase;
  font-size: 0.6em;
  font-weight: bold;
  margin: 5px;
}

.app {
  height: 40px;
}

.brand {
  width: 450px;
}

#home {
  margin-right: 8px;
  margin-top: 5px;
}

button {
  float: right;
  background: url('../images/bgtile.png');
  border: 1px solid #06365f;
  background: linear-gradient(to bottom, #4682B4 0%, #1c5380 50%);
  color: white;
  vertical-align: middle;
  width: 85px;
  height: 35px;

}

p {
  font-size: 0.8em;
  color: darkslategrey;
}
ul {
  list-style: none;
  margin: 5px;
}

li {
  display: inline-block;
  margin: 1px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.6em;
  color: #1c5380;
  padding: 5px
}

